--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .vscode/*
-!.vscode/settings.json
+# !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
@@ -10,3 +10,6 @@
 
 # Built Visual Studio Code Extensions
 *.vsix
+
+# For fusion 360 API development
+.env
